--- a/Contant Marketing Service.html
+++ b/Contant Marketing Service.html
@@ -36,16 +36,19 @@
   
   
 <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
-        <!-- <i class="fa fa-laptop-code fa-2x text-orange position-absolute top-50 start-50 translate-middle"></i> -->
-        <img src="img/target (1).png" width="4%" alt="" class="position-absolute top-50 start-50 translate-middle">
-        <img src="" alt="">
-    </div>
+   <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
+
+    <img src="img/target (1).png"
+         alt=""
+         class="spinner-img position-absolute top-50 start-50 translate-middle">
+
+    <img src="" alt="">
+</div>
 <!-- Spinner End -->
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-white px-0 py-2 topbar-custom wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-white px-0 topbar-custom wow fadeIn" data-wow-delay="0.1s">
     <div class="row gx-0 align-items-center d-none d-lg-flex">
 
         <!-- LEFT SIDE: Email + Phone -->
@@ -53,12 +56,12 @@
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-envelope text-orange me-2"></i>
-                <small class="text-secondary">info@example.com</small>
+                <small class="text-secondary">contact@trendoradigital.com</small>
             </div>
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-phone-alt text-orange me-2"></i>
-                <small class="text-secondary">+91 98765-43210</small>
+                <small class="text-secondary">+91 88473-37622</small>
             </div>
 
         </div>
@@ -90,7 +93,7 @@
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-     <div class="navbar-nav text-center mx-auto">
+    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
         <a href="index.html" class="nav-item nav-link active">Home</a>
 
@@ -187,19 +190,25 @@
 </section>
 
 <!-- WHY CHOOSE US SECTION -->
-<section class="py-5">
-    <div class="container text-center">
+<section class="why-seo-section py-5">
+  <div class="container text-center">
 
-        <h2 class="fw-bold mb-3">Why Our Branding & Design Works?</h2>
-        <p class="text-muted mb-4">
-            Our creative strategies build a consistent brand image, increase recognition, and leave a lasting impression
+    <!-- TOP CONTENT -->
+    <div class="why-seo-header">
+      <h2 class="why-seo-title fw-bold mb-3">
+        Why Our Branding & Design Works?
+      </h2>
+
+      <p class="why-seo-desc text-muted mb-4">
+         Our creative strategies build a consistent brand image, increase recognition, and leave a lasting impression
             on your audience.
-        </p>
+      </p>
+    </div>
 
-        <div class="row g-4">
+        <div class="why-seo-cards row g-4">
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class=" why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-brush text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Creative Designs</h5>
                     <p class="text-muted small">Every visual is carefully crafted to reflect your brand identity.</p>
@@ -207,7 +216,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class=" why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-bar-chart-line-fill text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Brand Consistency</h5>
                     <p class="text-muted small">Maintain a unified look across all platforms and marketing materials.</p>
@@ -215,7 +224,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-award-fill text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Professional Quality</h5>
                     <p class="text-muted small">All designs are original, professional, and tailored for your business.</p>
@@ -227,7 +236,7 @@
 </section>
 
 <!-- BRANDING SUCCESS STORIES -->
-<section class="seo-success-section py-5" style="background-color: #f3f3f3;">
+<!-- <section class="seo-success-section py-5" style="background-color: #f3f3f3;">
     <div class="container">
 
         <h2 class="text-center fw-bold display-6 mb-3 seo-heading">
@@ -240,7 +249,7 @@
         </p>
     </div>
 
-    <!-- Carousel -->
+    Carousel
     <div id="carouselExampleIndicators" class="container carousel slide" data-bs-ride="carousel"
         style="padding: 0px 0px 70px 0px;">
         <div class="carousel-indicators">
@@ -271,7 +280,7 @@
             <span class="carousel-control-next-icon"></span>
         </button>
     </div>
-</section>
+</section> -->
 
 <!-- Grow Business Section Start -->
 <div class="container-fluid grow-business-section py-5 ">
@@ -367,78 +376,85 @@ By delivering valuable and relevant content consistently, brands build trust, in
 </section>
 
 <!-- ================= PRICING SECTION ================= -->
-<section class="pricing-section py-5 bg-light">
-    <div class="container">
 
-        <h2 class="text-center fw-bold display-6 mb-3">Branding & Graphic Design Pricing Plans</h2>
-        <p class="text-center text-muted mb-5">
-            Choose a plan that fits your brand goals. Our design packages are crafted to deliver impactful results.
-        </p>
+<!-- ================= PRICING SECTION ================= -->
+<section class="faq-section py-5">
+  <div class="container">
 
-        <div class="row g-4">
+    <h2 class="faq-heading pricing-heading text-center fw-bold display-6 mb-3">
+      Content Marketing Pricing Plans
+    </h2>
 
-            <!-- Basic Plan -->
-            <div class="col-md-6 col-lg-4">
-                <div class="price-card p-4 text-center shadow rounded bg-white">
-                    <h4 class="fw-bold mb-2">Basic Design Plan</h4>
-                    <h2 class="text-orange fw-bold mb-3">₹4,999</h2>
-                    <p class="text-muted">Ideal for startups</p>
+    <p class="faq-para text-center text-muted mb-5">
+      Choose a content marketing package that matches your growth goals.  
+      Our plans focus on high-quality content that attracts, engages, and converts your audience.
+    </p>
+    
+    <div class="row g-4">
 
-                    <ul class="list-unstyled small mb-4">
-                        <li>✔ Logo Design</li>
-                        <li>✔ Social Media Graphics</li>
-                        <li>✔ Basic Branding Kit</li>
-                        <li>✔ 1 Revision</li>
-                        <li>✔ Delivery in 7 Days</li>
-                    </ul>
+      <!-- Basic Plan -->
+      <div class="col-md-6 col-lg-4">
+        <div class="price-card p-4 text-center shadow rounded bg-white">
+          <h4 class="fw-bold mb-2">Starter Content Plan</h4>
+          <h2 class="text-orange fw-bold mb-3">₹4,999</h2>
+          <p class="text-muted">Best for small businesses</p>
 
-                    <a href="#" class="btn btn-orange w-100 py-2 fw-bold">Get Started</a>
-                </div>
-            </div>
+          <ul class="list-unstyled small mb-4">
+            <li>✔ 4 SEO-Friendly Blog Posts</li>
+            <li>✔ Basic Keyword Research</li>
+            <li>✔ Content Optimization</li>
+            <li>✔ 2 Revisions</li>
+            <li>✔ Plagiarism-Free Content</li>
+          </ul>
 
-            <!-- Advanced Plan -->
-            <div class="col-md-6 col-lg-4">
-                <div class="price-card p-4 text-center shadow rounded bg-white border border-dark">
-                    <span class="badge bg-dark text-white px-3 py-2 mb-2">Most Popular</span>
-                    <h4 class="fw-bold mb-2">Advanced Design Plan</h4>
-                    <h2 class="text-orange fw-bold mb-3">₹9,999</h2>
-                    <p class="text-muted">Perfect for growing brands</p>
-
-                    <ul class="list-unstyled small mb-4">
-                        <li>✔ Logo & Brand Identity</li>
-                        <li>✔ Social Media Pack</li>
-                        <li>✔ Marketing Collateral</li>
-                        <li>✔ 3 Revisions</li>
-                        <li>✔ Delivery in 14 Days</li>
-                    </ul>
-
-                    <a href="#" class="btn btn-orange w-100 py-2 fw-bold">Get Started</a>
-                </div>
-            </div>
-
-            <!-- Premium Plan -->
-            <div class="col-md-6 col-lg-4">
-                <div class="price-card p-4 text-center shadow rounded bg-white">
-                    <h4 class="fw-bold mb-2">Premium Design Plan</h4>
-                    <h2 class="text-orange fw-bold mb-3">₹19,999</h2>
-                    <p class="text-muted">Ideal for established brands</p>
-
-                    <ul class="list-unstyled small mb-4">
-                        <li>✔ Complete Brand Identity</li>
-                        <li>✔ Social & Marketing Graphics</li>
-                        <li>✔ Logo Variations & Stationery</li>
-                        <li>✔ Unlimited Revisions</li>
-                        <li>✔ Priority Support</li>
-                    </ul>
-
-                    <a href="#" class="btn btn-orange w-100 py-2 fw-bold">Get Started</a>
-                </div>
-            </div>
-
+          <a href="#" class="btn btn-orange w-100 py-2 fw-bold">Get Started</a>
         </div>
+      </div>
+
+      <!-- Advanced Plan -->
+      <div class="col-md-6 col-lg-4">
+        <div class="price-card p-4 text-center shadow rounded bg-white border border-dark">
+          <span class="badge bg-dark text-white px-3 py-2 mb-2">Most Popular</span>
+          <h4 class="fw-bold mb-2">Growth Content Plan</h4>
+          <h2 class="text-orange fw-bold mb-3">₹9,999</h2>
+          <p class="text-muted">Perfect for growing brands</p>
+
+          <ul class="list-unstyled small mb-4">
+            <li>✔ 8 Blog Articles</li>
+            <li>✔ SEO Keyword Strategy</li>
+            <li>✔ Social Media Content Copies</li>
+            <li>✔ 5 Revisions</li>
+            <li>✔ Content Performance Guidance</li>
+          </ul>
+
+          <a href="#" class="btn btn-orange w-100 py-2 fw-bold">Get Started</a>
+        </div>
+      </div>
+
+      <!-- Premium Plan -->
+      <div class="col-md-6 col-lg-4">
+        <div class="price-card p-4 text-center shadow rounded bg-white">
+          <h4 class="fw-bold mb-2">Premium Content Authority Plan</h4>
+          <h2 class="text-orange fw-bold mb-3">₹19,999</h2>
+          <p class="text-muted">Ideal for established brands</p>
+
+          <ul class="list-unstyled small mb-4">
+            <li>✔ 16 High-Quality Content Pieces</li>
+            <li>✔ Advanced SEO & Topic Research</li>
+            <li>✔ Website + Landing Page Content</li>
+            <li>✔ 10 Revisions</li>
+            <li>✔ Content Strategy & Planning</li>
+          </ul>
+
+          <a href="#" class="btn btn-orange w-100 py-2 fw-bold">Get Started</a>
+        </div>
+      </div>
 
     </div>
+
+  </div>
 </section>
+
 
 <!-- ================= FAQ SECTION ================= -->
 <section class="faq-section py-5">
@@ -571,10 +587,10 @@ By delivering valuable and relevant content consistently, brands build trust, in
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                     <h5 class="text-light mb-4">Address</h5>
+             <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>E 253, Phase 8B Industrial Area, Mohali, Punjab, India</p>
+             <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 88473 37622</p>
+             <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@trendoradigital.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -600,29 +616,6 @@ By delivering valuable and relevant content consistently, brands build trust, in
                     <a class="btn btn-link" href="">SEO Optimization</a>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Gallery</h5>
-                    <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-2.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-3.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-4.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-5.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-6.jpg" alt="Image">
-                        </div>
-                    </div>
-                </div> -->
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
             <p>Subscribe for the latest digital marketing tips, updates, and growth insights.</p>
@@ -640,9 +633,6 @@ By delivering valuable and relevant content consistently, brands build trust, in
                         &copy; <a href="#">Trendora Digital</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** The author’s attribution link must remain intact in the template. ***/-->
-                        <!--/*** If you wish to remove this credit link, please purchase the Pro Version . ***/-->
-                        <!-- Designed By <a href="https://htmlcodex.com">HTML Codex</a> -->
                     </div>
                 </div>
             </div>
@@ -656,20 +646,14 @@ By delivering valuable and relevant content consistently, brands build trust, in
 
 
     <!-- JavaScript Libraries -->
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
-    <script src="css/bootstrap.bundle.min.js"></script>
   
 
     <!-- Template Javascript -->
