--- a/Email Marketing.html
+++ b/Email Marketing.html
@@ -35,16 +35,19 @@
 <body>
     
 <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
-        <!-- <i class="fa fa-laptop-code fa-2x text-orange position-absolute top-50 start-50 translate-middle"></i> -->
-        <img src="img/target (1).png" width="4%" alt="" class="position-absolute top-50 start-50 translate-middle">
-        <img src="" alt="">
-    </div>
+ <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
+
+    <img src="img/target (1).png"
+         alt=""
+         class="spinner-img position-absolute top-50 start-50 translate-middle">
+
+    <img src="" alt="">
+</div>
 <!-- Spinner End -->
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-white px-0 py-2 topbar-custom wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-white px-0 topbar-custom wow fadeIn" data-wow-delay="0.1s">
     <div class="row gx-0 align-items-center d-none d-lg-flex">
 
         <!-- LEFT SIDE: Email + Phone -->
@@ -52,12 +55,12 @@
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-envelope text-orange me-2"></i>
-                <small class="text-secondary">info@example.com</small>
+                <small class="text-secondary">contact@trendoradigital.com</small>
             </div>
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-phone-alt text-orange me-2"></i>
-                <small class="text-secondary">+91 98765-43210</small>
+                <small class="text-secondary">+91 88473-37622</small>
             </div>
 
         </div>
@@ -89,7 +92,7 @@
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-     <div class="navbar-nav text-center mx-auto">
+    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
         <a href="index.html" class="nav-item nav-link active">Home</a>
 
@@ -135,16 +138,6 @@
     </nav>
  <!-- Navbar End -->
   
-
-
-
-
-
-
-  
-    
-
-
 <!-- ================= HERO SECTION ================= -->
 <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container text-center py-5">
@@ -163,7 +156,7 @@
 
         <div class="row g-4 align-items-center">
             <div class="col-lg-6">
-                <img src="https://img.freepik.com/free-vector/email-marketing-concept-illustration_114360-822.jpg"
+                <img src="img/e-mail marketing.webp"
                     class="img-fluid rounded shadow" alt="Email Marketing Services">
             </div>
 
@@ -196,18 +189,24 @@
 </section>
 
 <!-- WHY CHOOSE US PRICING SECTION -->
-<section class="py-5">
-    <div class="container text-center">
+<section class="why-seo-section py-5">
+  <div class="container text-center">
 
-        <h2 class="fw-bold mb-3">Why Our Email Marketing Works?</h2>
-        <p class="text-muted mb-4">
-            We craft emails that connect with your audience, nurture leads, and increase your ROI.
-        </p>
+    <!-- TOP CONTENT -->
+    <div class="why-seo-header">
+      <h2 class="why-seo-title fw-bold mb-3">
+       Why Our Email Marketing Works?
+      </h2>
 
-        <div class="row g-4">
+      <p class="why-seo-desc text-muted mb-4">
+       We craft emails that connect with your audience, nurture leads, and increase your ROI.
+      </p>
+    </div>
+
+        <div class=" why-seo-cards row g-4">
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                  <i class="bi bi-envelope fs-1 text-orange"></i>
                     <h5 class="mt-3 fw-bold">Personalized Campaigns</h5>
                     <p class="text-muted small">Emails tailored to subscriber interests and behavior for maximum impact.</p>
@@ -215,7 +214,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                <i class="bi bi-arrow-up-right-circle-fill fs-1 text-orange"></i>
                     <h5 class="mt-3 fw-bold">Performance Tracking</h5>
                     <p class="text-muted small">Measure open rates, clicks, and conversions with detailed reports.</p>
@@ -223,7 +222,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-award fs-1 text-orange"></i>
                     <h5 class="mt-3 fw-bold">Guaranteed Results</h5>
                     <p class="text-muted small">Every campaign is optimized to maximize engagement and sales.</p>
@@ -235,7 +234,7 @@
 </section>
 
 <!-- EMAIL MARKETING SUCCESS STORIES -->
-<section class="seo-success-section py-5" style="background-color: #f3f3f3;">
+<!-- <section class="seo-success-section py-5" style="background-color: #f3f3f3;">
     <div class="container">
 
         <h2 class="text-center fw-bold display-6 mb-3 seo-heading">
@@ -248,7 +247,7 @@
         </p>
     </div>
 
-    <!-- Carousel -->
+    Carousel
     <div id="carouselExampleIndicators" class="container carousel slide" data-bs-ride="carousel"
         style="padding: 0px 0px 70px 0px;">
         <div class="carousel-indicators">
@@ -279,7 +278,7 @@
             <span class="carousel-control-next-icon"></span>
         </button>
     </div>
-</section>
+</section> -->
 
 <!-- Grow Business Section Start -->
 <div class="container-fluid grow-business-section py-5">
@@ -376,14 +375,17 @@
 </section>
 
 <!-- ================= PRICING SECTION ================= -->
-<section class="pricing-section py-5 bg-light">
+<section class="faq-section py-5">
     <div class="container">
 
-        <h2 class="text-center fw-bold display-6 mb-3">Email Marketing Pricing Plans</h2>
-        <p class="text-center text-muted mb-5">
-            Choose a plan that suits your business goals.  
+        <h2 class="faq-heading text-center fw-bold display-6 mb-3">
+   Email Marketing Pricing Plans
+    </h2>
+
+    <p class="faq-para text-center text-muted mb-5">
+      Choose a plan that suits your business goals.  
             Our email marketing packages are designed to boost engagement and ROI.
-        </p>
+    </p>
 
         <div class="row g-4">
 
@@ -582,10 +584,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                       <h5 class="text-light mb-4">Address</h5>
+             <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>E 253, Phase 8B Industrial Area, Mohali, Punjab, India</p>
+             <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 88473 37622</p>
+             <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@trendoradigital.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -667,7 +669,7 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
@@ -675,7 +677,6 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
-
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
