--- a/Google ads.html
+++ b/Google ads.html
@@ -35,16 +35,19 @@
 <body>
     
 <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
-        <!-- <i class="fa fa-laptop-code fa-2x text-orange position-absolute top-50 start-50 translate-middle"></i> -->
-        <img src="img/target (1).png" width="4%" alt="" class="position-absolute top-50 start-50 translate-middle">
-        <img src="" alt="">
-    </div>
+  <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
+
+    <img src="img/target (1).png"
+         alt=""
+         class="spinner-img position-absolute top-50 start-50 translate-middle">
+
+    <img src="" alt="">
+</div>
 <!-- Spinner End -->
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-white px-0 py-2 topbar-custom wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-white px-0 topbar-custom wow fadeIn" data-wow-delay="0.1s">
     <div class="row gx-0 align-items-center d-none d-lg-flex">
 
         <!-- LEFT SIDE: Email + Phone -->
@@ -52,12 +55,12 @@
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-envelope text-orange me-2"></i>
-                <small class="text-secondary">info@example.com</small>
+                <small class="text-secondary">contact@trendoradigital.com</small>
             </div>
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-phone-alt text-orange me-2"></i>
-                <small class="text-secondary">+91 98765-43210</small>
+                <small class="text-secondary">+91 88473-37622</small>
             </div>
 
         </div>
@@ -89,7 +92,7 @@
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-     <div class="navbar-nav text-center mx-auto">
+    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
         <a href="index.html" class="nav-item nav-link active">Home</a>
 
@@ -191,19 +194,25 @@
 </section>
 
 <!-- WHY CHOOSE US PRICING SECTION -->
-<section class="py-5">
-    <div class="container text-center">
+<section class="why-seo-section py-5">
+  <div class="container text-center">
 
-        <h2 class="fw-bold mb-3">Why Our PPC Campaigns Work?</h2>
-        <p class="text-muted mb-4">
-            Our PPC strategies are designed to deliver measurable results, improve ROI, and scale your business 
+    <!-- TOP CONTENT -->
+    <div class="why-seo-header">
+      <h2 class="why-seo-title fw-bold mb-3">
+        Why Our PPC Campaigns Work?
+      </h2>
+
+      <p class="why-seo-desc text-muted mb-4">
+       Our PPC strategies are designed to deliver measurable results, improve ROI, and scale your business 
             with data-driven optimization.
-        </p>
+      </p>
+    </div>
 
-        <div class="row g-4">
+        <div class="why-seo-cards row g-4">
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-cash-stack text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Maximize ROI</h5>
                     <p class="text-muted small">Every ad dollar is optimized to get the best returns for your business.</p>
@@ -211,7 +220,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-bar-chart-line text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Performance Tracking</h5>
                     <p class="text-muted small">We monitor clicks, impressions, conversions, and adjust campaigns for growth.</p>
@@ -219,7 +228,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-shield-check text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Certified Experts</h5>
                     <p class="text-muted small">Our team consists of certified Google Ads and Meta Ads professionals.</p>
@@ -373,10 +382,13 @@
 <section class="pricing-section py-5 bg-light">
     <div class="container">
 
-        <h2 class="text-center fw-bold display-6 mb-3">PPC Management Pricing Plans</h2>
-        <p class="text-center text-muted mb-5">
-            Choose a plan that fits your business goals. Our PPC packages are designed to deliver measurable results.
-        </p>
+     <h2 class="faq-heading text-center fw-bold display-6 mb-3">
+  PPC Management Pricing Plans
+    </h2>
+
+    <p class="faq-para text-center text-muted mb-5">
+      Choose a plan that fits your business goals. Our PPC packages are designed to deliver measurable results.
+    </p>
 
         <div class="row g-4">
 
@@ -576,10 +588,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                      <h5 class="text-light mb-4">Address</h5>
+             <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>E 253, Phase 8B Industrial Area, Mohali, Punjab, India</p>
+             <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 88473 37622</p>
+             <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@trendoradigital.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -605,29 +617,6 @@
                     <a class="btn btn-link" href="">SEO Optimization</a>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Gallery</h5>
-                    <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-2.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-3.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-4.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-5.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-6.jpg" alt="Image">
-                        </div>
-                    </div>
-                </div> -->
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
             <p>Subscribe for the latest digital marketing tips, updates, and growth insights.</p>
@@ -645,9 +634,6 @@
                         &copy; <a href="#">Trendora Digital</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** The author’s attribution link must remain intact in the template. ***/-->
-                        <!--/*** If you wish to remove this credit link, please purchase the Pro Version . ***/-->
-                        <!-- Designed By <a href="https://htmlcodex.com">HTML Codex</a> -->
                     </div>
                 </div>
             </div>
@@ -663,8 +649,6 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
