--- a/Social Media Marketing.html
+++ b/Social Media Marketing.html
@@ -35,29 +35,32 @@
 <body>
    
 <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
-        <!-- <i class="fa fa-laptop-code fa-2x text-orange position-absolute top-50 start-50 translate-middle"></i> -->
-        <img src="img/target (1).png" width="4%" alt="" class="position-absolute top-50 start-50 translate-middle">
-        <img src="" alt="">
-    </div>
+   <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
+
+    <img src="img/social media marketing (3).jpg"
+         alt=""
+         class="spinner-img position-absolute top-50 start-50 translate-middle">
+
+    <img src="" alt="">
+</div>
 <!-- Spinner End -->
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-white px-0 py-2 topbar-custom wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-white px-0 topbar-custom wow fadeIn" data-wow-delay="0.1s">
     <div class="row gx-0 align-items-center d-none d-lg-flex">
 
         <!-- LEFT SIDE: Email + Phone -->
         <div class="col-lg-6 px-5 text-start d-flex align-items-center gap-4">
 
-            <div class="d-flex align-items-center">
+             <div class="d-flex align-items-center">
                 <i class="fa fa-envelope text-orange me-2"></i>
-                <small class="text-secondary">info@example.com</small>
+                <small class="text-secondary">contact@trendoradigital.com</small>
             </div>
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-phone-alt text-orange me-2"></i>
-                <small class="text-secondary">+91 98765-43210</small>
+                <small class="text-secondary">+91 88473-37622</small>
             </div>
 
         </div>
@@ -89,7 +92,7 @@
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-     <div class="navbar-nav text-center mx-auto">
+    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
         <a href="index.html" class="nav-item nav-link active">Home</a>
 
@@ -135,10 +138,6 @@
     </nav>
  <!-- Navbar End -->
   
-
-
-
-
 <!-- ================= HERO SECTION ================= -->
 <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container text-center py-5">
@@ -157,7 +156,7 @@
 
         <div class="row g-4 align-items-center">
             <div class="col-lg-6">
-                <img src="https://img.freepik.com/free-vector/social-media-marketing-concept-illustration_114360-955.jpg"
+                <img src="img/social media marketing (3).jpg"
                     class="img-fluid rounded shadow" alt="Social Media Marketing Services">
             </div>
 
@@ -189,18 +188,25 @@
 </section>
 
 <!-- WHY CHOOSE US PRICING SECTION -->
-<section class="py-5">
-    <div class="container text-center">
 
-        <h2 class="fw-bold mb-3">Why Our Social Media Marketing Works?</h2>
-        <p class="text-muted mb-4">
-            Our strategies increase brand visibility, drive engagement, and help convert followers into loyal customers.
-        </p>
+<section class="why-seo-section py-5">
+  <div class="container text-center">
 
-        <div class="row g-4">
+    <!-- TOP CONTENT -->
+    <div class="why-seo-header">
+      <h2 class="why-seo-title fw-bold mb-3">
+        Why Our Social Media Marketing Works?
+      </h2>
+
+      <p class="why-seo-desc text-muted mb-4">
+       Our strategies increase brand visibility, drive engagement, and help convert followers into loyal customers.
+      </p>
+    </div>
+
+        <div class="why-seo-cards row g-4">
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-lightning-charge-fill text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Engaging Content</h5>
                     <p class="text-muted small">We create posts, stories, and videos that resonate with your audience.</p>
@@ -208,7 +214,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-bar-chart-line-fill text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Performance Analysis</h5>
                     <p class="text-muted small">Track likes, shares, and follower growth with detailed monthly reports.</p>
@@ -216,7 +222,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-award-fill text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Proven Results</h5>
                     <p class="text-muted small">Our campaigns help you gain real engagement and increase brand awareness.</p>
@@ -241,8 +247,7 @@ Our social media experts help you connect with people using posts, stories and a
     </div>
 
     <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="container carousel slide" data-bs-ride="carousel"
-        style="padding: 0px 0px 70px 0px;">
+     <div id="carouselExampleIndicators" class="container carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -252,8 +257,9 @@ Our social media experts help you connect with people using posts, stories and a
                 aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
+        <div class="carousel-inner">
             <div class="carousel-item active">
-                 <img src="img/Adora (9)-compressed.jpg" class="d-block w-100" alt="PPC Success Story 1">
+                <img src="img/Adora (9)-compressed.jpg" class="d-block w-100" alt="PPC Success Story 1">
             </div>
             <div class="carousel-item">
                 <img src="img/Adora (10)-compressed.jpg" class="d-block w-100" alt="PPC Success Story 2">
@@ -299,7 +305,6 @@ Our social media experts help you connect with people using posts, stories and a
         </div>
     </div>
 </div>
-
 <!-- Grow Business Section End -->
 
 <!-- SOCIAL MEDIA BENEFIT CARDS -->
@@ -367,15 +372,17 @@ Our social media experts help you connect with people using posts, stories and a
 </section>
 
 <!-- ================= PRICING SECTION ================= -->
-<section class="pricing-section py-5 bg-light">
+<section class="faq-section py-5">
     <div class="container">
 
-        <h2 class="text-center fw-bold display-6 mb-3">Social Media Marketing Pricing Plans</h2>
-        <p class="text-center text-muted mb-5">
-            Choose a plan that fits your social media goals.  
-            Our packages are designed to increase followers, engagement, and conversions.
-        </p>
+         <h2 class="faq-heading text-center fw-bold display-6 mb-3">
+   Social Media Marketing Pricing Plans
+    </h2>
 
+    <p class="faq-para text-center text-muted mb-5">
+       Choose a plan that fits your social media goals.  
+            Our packages are designed to increase followers, engagement, and conversions.
+    </p>
         <div class="row g-4">
 
             <!-- Basic Plan -->
@@ -566,24 +573,15 @@ Our social media experts help you connect with people using posts, stories and a
     </div>
 </section>
 
-
-
-
-
-    
-
-
-    
-
     <!-- Footer Start -->
      <div class="container-fluid bg-dark text-body footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                      <h5 class="text-light mb-4">Address</h5>
+             <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>E 253, Phase 8B Industrial Area, Mohali, Punjab, India</p>
+             <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 88473 37622</p>
+             <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@trendoradigital.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -609,29 +607,6 @@ Our social media experts help you connect with people using posts, stories and a
                     <a class="btn btn-link" href="">SEO Optimization</a>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Gallery</h5>
-                    <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-2.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-3.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-4.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-5.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-6.jpg" alt="Image">
-                        </div>
-                    </div>
-                </div> -->
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
             <p>Subscribe for the latest digital marketing tips, updates, and growth insights.</p>
@@ -649,9 +624,6 @@ Our social media experts help you connect with people using posts, stories and a
                         &copy; <a href="#">Trendora Digital</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** The author’s attribution link must remain intact in the template. ***/-->
-                        <!--/*** If you wish to remove this credit link, please purchase the Pro Version . ***/-->
-                        <!-- Designed By <a href="https://htmlcodex.com">HTML Codex</a> -->
                     </div>
                 </div>
             </div>
@@ -667,15 +639,12 @@ Our social media experts help you connect with people using posts, stories and a
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
-
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
