--- a/online reputation management.html
+++ b/online reputation management.html
@@ -35,16 +35,19 @@
 <body>
     
 <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
-        <!-- <i class="fa fa-laptop-code fa-2x text-orange position-absolute top-50 start-50 translate-middle"></i> -->
-        <img src="img/target (1).png" width="4%" alt="" class="position-absolute top-50 start-50 translate-middle">
-        <img src="" alt="">
-    </div>
+   <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
+
+    <img src="img/target (1).png"
+         alt=""
+         class="spinner-img position-absolute top-50 start-50 translate-middle">
+
+    <img src="" alt="">
+</div>
 <!-- Spinner End -->
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-white px-0 py-2 topbar-custom wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-white px-0 topbar-custom wow fadeIn" data-wow-delay="0.1s">
     <div class="row gx-0 align-items-center d-none d-lg-flex">
 
         <!-- LEFT SIDE: Email + Phone -->
@@ -52,12 +55,12 @@
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-envelope text-orange me-2"></i>
-                <small class="text-secondary">info@example.com</small>
+                <small class="text-secondary">contact@trendoradigital.com</small>
             </div>
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-phone-alt text-orange me-2"></i>
-                <small class="text-secondary">+91 98765-43210</small>
+                <small class="text-secondary">+91 88473-37622</small>
             </div>
 
         </div>
@@ -89,7 +92,7 @@
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-     <div class="navbar-nav text-center mx-auto">
+    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
         <a href="index.html" class="nav-item nav-link active">Home</a>
 
@@ -134,10 +137,6 @@
 </div>
     </nav>
  <!-- Navbar End -->
-  
-
-
-
 
 <!-- ================= HERO SECTION ================= -->
 <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
@@ -157,7 +156,7 @@
 
         <div class="row g-4 align-items-center">
             <div class="col-lg-6">
-                <img src="https://img.freepik.com/free-vector/online-reputation-management-concept-illustration_114360-955.jpg"
+                <img src="img/online reputation.webp"
                     class="img-fluid rounded shadow" alt="Online Reputation Management">
             </div>
 
@@ -189,18 +188,25 @@
 </section>
 
 <!-- WHY CHOOSE US PRICING SECTION -->
-<section class="py-5">
-    <div class="container text-center">
 
-        <h2 class="fw-bold mb-3">Why Our ORM Services Work?</h2>
-        <p class="text-muted mb-4">
-            Our ORM strategies protect your brand, improve customer trust, and maintain a positive online presence.
-        </p>
+<section class="why-seo-section py-5">
+  <div class="container text-center">
 
-        <div class="row g-4">
+    <!-- TOP CONTENT -->
+    <div class="why-seo-header">
+      <h2 class="why-seo-title fw-bold mb-3">
+       Why Our ORM Services Work?
+      </h2>
+
+      <p class="why-seo-desc text-muted mb-4">
+        Our ORM strategies protect your brand, improve customer trust, and maintain a positive online presence.
+      </p>
+    </div>
+
+        <div class="row g-4 why-seo-cards">
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-person-check text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Brand Protection</h5>
                     <p class="text-muted small">Monitor online mentions and respond effectively to protect your reputation.</p>
@@ -208,7 +214,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
                     <i class="bi bi-chat-dots-fill text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Customer Engagement</h5>
                     <p class="text-muted small">Interact with customers on social media and review platforms to build trust.</p>
@@ -216,7 +222,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="p-4 shadow rounded bg-white">
+                <div class="why-seo-card p-4 shadow rounded bg-white">
             <i class="bi bi-bar-chart-line text-orange fs-1"></i>
                     <h5 class="mt-3 fw-bold">Improved Visibility</h5>
                     <p class="text-muted small">Enhance your positive content to rank higher on search engines.</p>
@@ -227,50 +233,6 @@
     </div>
 </section>
 
-<!-- ORM SUCCESS STORIES -->
-<section class="seo-success-section py-5" style="background-color: #f3f3f3;">
-    <div class="container">
-
-        <h2 class="text-center fw-bold display-6 mb-3 seo-heading">
-            Online Reputation Success Stories
-        </h2>
-
-        <p class="text-center mb-5 text-muted seo-para">
-            See how our ORM services helped brands improve their online image, manage reviews, and increase customer trust.
-        </p>
-    </div>
-
-    <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="container carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/orm-1.jpg" class="d-block w-100" alt="ORM Success Story 1">
-            </div>
-            <div class="carousel-item">
-                <img src="img/orm-2.jpg" class="d-block w-100" alt="ORM Success Story 2">
-            </div>
-            <div class="carousel-item">
-                <img src="img/orm-3.jpg" class="d-block w-100" alt="ORM Success Story 3">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
-    </div>
-</section>
 
 <!-- Grow Business Section Start -->
 <div class="container-fluid grow-business-section py-5">
@@ -367,14 +329,17 @@
 </section>
 
 <!-- ================= PRICING SECTION ================= -->
-<section class="pricing-section py-5 bg-light">
+<section class="faq-section py-5">
     <div class="container">
 
-        <h2 class="text-center fw-bold display-6 mb-3">ORM Pricing Plans</h2>
-        <p class="text-center text-muted mb-5">
-            Choose a plan that fits your business needs.  
+        <h2 class="faq-heading text-center fw-bold display-6 mb-3">
+   ORM Pricing Plans
+    </h2>
+
+    <p class="faq-para text-center text-muted mb-5">
+       Choose a plan that fits your business needs.  
             Our ORM packages are designed to protect and enhance your online reputation.
-        </p>
+    </p>
 
         <div class="row g-4">
 
@@ -571,10 +536,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                      <h5 class="text-light mb-4">Address</h5>
+             <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>E 253, Phase 8B Industrial Area, Mohali, Punjab, India</p>
+             <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 88473 37622</p>
+             <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@trendoradigital.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -600,29 +565,6 @@
                     <a class="btn btn-link" href="">SEO Optimization</a>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Gallery</h5>
-                    <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-2.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-3.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-4.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-5.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-6.jpg" alt="Image">
-                        </div>
-                    </div>
-                </div> -->
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
             <p>Subscribe for the latest digital marketing tips, updates, and growth insights.</p>
@@ -640,9 +582,6 @@
                         &copy; <a href="#">Trendora Digital</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** The author’s attribution link must remain intact in the template. ***/-->
-                        <!--/*** If you wish to remove this credit link, please purchase the Pro Version . ***/-->
-                        <!-- Designed By <a href="https://htmlcodex.com">HTML Codex</a> -->
                     </div>
                 </div>
             </div>
