--- a/project.html
+++ b/project.html
@@ -36,28 +36,31 @@
    
 <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
-        <!-- <i class="fa fa-laptop-code fa-2x text-orange position-absolute top-50 start-50 translate-middle"></i> -->
-        <img src="img/target (1).png" width="4%" alt="" class="position-absolute top-50 start-50 translate-middle">
-        <img src="" alt="">
-    </div>
+    <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
+
+    <img src="img/target (1).png"
+         alt=""
+         class="spinner-img position-absolute top-50 start-50 translate-middle">
+
+    <img src="" alt="">
+</div>
 <!-- Spinner End -->
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-white px-0 py-2 topbar-custom wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-white px-0 topbar-custom wow fadeIn" data-wow-delay="0.1s">
     <div class="row gx-0 align-items-center d-none d-lg-flex">
 
         <!-- LEFT SIDE: Email + Phone -->
         <div class="col-lg-6 px-5 text-start d-flex align-items-center gap-4">
 
-            <div class="d-flex align-items-center">
+             <div class="d-flex align-items-center">
                 <i class="fa fa-envelope text-orange me-2"></i>
-                <small class="text-secondary">info@example.com</small>
+                <small class="text-secondary">contact@trendoradigital.com</small>
             </div>
 
             <div class="d-flex align-items-center">
                 <i class="fa fa-phone-alt text-orange me-2"></i>
-                <small class="text-secondary">+91 98765-43210</small>
+                <small class="text-secondary">+91 88473-37622</small>
             </div>
 
         </div>
@@ -89,7 +92,7 @@
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-     <div class="navbar-nav text-center mx-auto">
+    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
         <a href="index.html" class="nav-item nav-link active">Home</a>
 
@@ -135,9 +138,6 @@
     </nav>
  <!-- Navbar End -->
   
-
-
-
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
@@ -307,10 +307,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                     <h5 class="text-light mb-4">Address</h5>
+             <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>E 253, Phase 8B Industrial Area, Mohali, Punjab, India</p>
+             <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 88473 37622</p>
+             <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@trendoradigital.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -336,29 +336,6 @@
                     <a class="btn btn-link" href="">SEO Optimization</a>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Gallery</h5>
-                    <div class="row g-2">
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-2.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-3.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-4.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-5.jpg" alt="Image">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid rounded" src="img/project-6.jpg" alt="Image">
-                        </div>
-                    </div>
-                </div> -->
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
             <p>Subscribe for the latest digital marketing tips, updates, and growth insights.</p>
@@ -376,9 +353,6 @@
                         &copy; <a href="#">Trendora Digital</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** The author’s attribution link must remain intact in the template. ***/-->
-                        <!--/*** If you wish to remove this credit link, please purchase the Pro Version . ***/-->
-                        <!-- Designed By <a href="https://htmlcodex.com">HTML Codex</a> -->
                     </div>
                 </div>
             </div>
