--- a/feature.html
+++ b/feature.html
@@ -102,7 +102,7 @@
     <!-- CENTER LINKS -->
     <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
-        <a href="index.html" class="nav-item nav-link active">Home</a>
+        <a href="index.html" class="nav-item nav-link">Home</a>
 
         <div class="nav-item dropdown">
             <a href="service.html" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Service</a>
@@ -254,15 +254,16 @@
     </div>
     <!-- Feature End -->
 
-    <!-- Footer Start -->
+  <!-- Footer Start -->
     <div class="container-fluid bg-dark text-body footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                     <h5 class="text-light mb-4">Address</h5>
+               <h5 class="text-light mb-4">Address</h5>
              <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>E 253, Phase 8B Industrial Area, Mohali, Punjab, India</p>
              <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 88473 37622</p>
              <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@trendoradigital.com</p>
+
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -272,28 +273,28 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div>
 
                    <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">Content Marketing</a>
-                    <a class="btn btn-link" href="">Social Media Marketing</a>
-                    <a class="btn btn-link" href="">Pay Per Click Management</a>
-                    <a class="btn btn-link" href="">Web Development</a>
-                    <a class="btn btn-link" href="">SEO Optimization</a>
+                    <a class="btn btn-link" href="Contant Marketing Service.html">Content Marketing</a>
+                    <a class="btn btn-link" href="Social Media Marketing.html">Social Media Marketing</a>
+                    <a class="btn btn-link" href="Google ads.html">Pay Per Click Management</a>
+                    <a class="btn btn-link" href="Website Design & development.html">Web Development</a>
+                    <a class="btn btn-link" href="SEO Service.html">SEO Optimization</a>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Newsletter</h5>
+                   <h5 class="text-light mb-4">Newsletter</h5>
             <p>Subscribe for the latest digital marketing tips, updates, and growth insights.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent border-secondary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-dark bg-custom py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button" class="btn btn-dark primary-btn py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
                 </div>
             </div>
@@ -305,6 +306,7 @@
                         &copy; <a href="#">Trendora Digital</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
+                    
                     </div>
                 </div>
             </div>
