add api and changing design

--- a/feature.html
+++ b/feature.html
@@ -105,9 +105,12 @@
         <a href="index.html" class="nav-item nav-link">Home</a>
 
         <div class="nav-item dropdown">
-            <a href="service.html" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Service</a>
+             <a href="service.html"
+         class="nav-link dropdown-toggle"
+        onclick="window.location.href='service.html'">
+           Services
+        </a>
             <div class="dropdown-menu m-0 p-0">
-                <a href="service.html" class="dropdown-item py-2">ALL Services</a>
                 <a href="SEO Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
                 <a href="Contant Marketing Service.html" class="dropdown-item py-2">Content Marketing Services</a>
                 <a href="Website Design & development.html" class="dropdown-item py-2">Web Design & Development</a>
@@ -331,6 +334,23 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+      <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/695351ddd5d3bd197b4d77ec/1jdmnfig7';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+    
+
+
 </body>
 
 </html>
