--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-   
+
 <!-- Spinner Start -->
    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
     <div class="spinner-border position-relative text-orange" style="width: 6rem; height: 6rem;" role="status"></div>
@@ -97,9 +97,12 @@
         <a href="index.html" class="nav-item nav-link">Home</a>
 
         <div class="nav-item dropdown">
-            <a href="service.html" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Service</a>
+            <a href="service.html"
+         class="nav-link dropdown-toggle"
+        onclick="window.location.href='service.html'">
+           Services
+        </a>
             <div class="dropdown-menu m-0 p-0">
-                <a href="service.html" class="dropdown-item py-2">ALL Services</a>
                 <a href="SEO Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
                 <a href="Contant Marketing Service.html" class="dropdown-item py-2">Content Marketing Services</a>
                 <a href="Website Design & development.html" class="dropdown-item py-2">Web Design & Development</a>
@@ -157,7 +160,7 @@
 
 
     <!-- Contact Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h6 class="section-title bg-white text-center text-orange px-3">Contact Us</h6>
@@ -165,10 +168,12 @@
             </div>
             <div class="row g-0 justify-content-center">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.5s">
-                    <form>
+                    <form action="https://api.web3forms.com/submit" method="POST">
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <div class="form-floating">
+                                <div class="form-floating"> 
+                                     <input type="hidden" name="access_key" value="fafc9031-5197-485d-9036-cf2405abc495">
+
                                     <input type="text" class="form-control" id="name" placeholder="Your Name">
                                     <label for="name">Your Name</label>
                                 </div>
@@ -192,16 +197,84 @@
                                 </div>
                             </div>
                             <div class="col-12 text-center">
-                                <button class="btn btn-dark primary-btn rounded-pill py-3 px-5">Send Message</button>
+                                <button class=" btn btn-dark primary-btn rounded-pill py-3 px-5">Send Message</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Contact End -->
 
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+            <h6 class="section-title bg-white text-center text-orange px-3">Contact Us</h6>
+            <h1 class="display-6 mb-4">
+                If You Have Any Query, Please Feel Free Contact Us
+            </h1>
+        </div>
+
+        <div class="row g-0 justify-content-center">
+            <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.5s">
+
+                <!-- SINGLE FORM START -->
+                <form action="https://api.web3forms.com/submit" method="POST">
+
+                    <!-- Web3Forms Access Key -->
+                    <input type="hidden" name="access_key" value="d53d421d-ee63-4403-a9a7-9036bde70468">
+
+                    <div class="row g-3">
+
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required>
+                                <label for="name">Your Name</label>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                                <label for="email">Your Email</label>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                                <label for="subject">Subject</label>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <textarea class="form-control" name="message" id="message" placeholder="Leave a message here" style="height: 200px" required></textarea>
+                                <label for="message">Message</label>
+                            </div>
+                        </div>
+
+                        <div class="col-12 text-center">
+                            <button type="submit" class="btn btn-dark primary-btn rounded-pill py-3 px-5">
+                                Send Message
+                            </button>
+
+
+                          <!-- <button type="" class="https://calendly.com/gouravkamboj443/new-meeting" class="btn btn-dark primary-btn rounded-pill py-3 px-5">
+                                Add Meeting
+                            </button> -->
+
+                        </div>
+
+                    </div>
+                </form>
+                <!-- SINGLE FORM END -->
+
+            </div>
+        </div>
+    </div>
+</div>
 
     <!-- Google Map Start -->
     <div class="container-xxl pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
@@ -289,6 +362,24 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+     
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/695351ddd5d3bd197b4d77ec/1jdmnfig7';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
+
+
 </body>
 
 </html>
