--- a/index.html
+++ b/index.html
@@ -93,135 +93,114 @@
         <img class="navbar-brand ms-3 d-lg-none" src="img/digitallogo.png" width="40%" alt="">
 
         <button type="button" class="navbar-toggler me-3 bg-dark" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon bg-dark"></span>
+            <span class="navbar-toggler-icon "></span>
         </button>
                       <img class="logo" src="img/digitallogo.png" width="15%" alt="">
 
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
+   <div class="navbar-nav mx-auto"> 
 
         <a href="index.html" class="nav-item nav-link">Home</a>
+       <div class="nav-item dropdown">
+       <a href="service.html" class="nav-link nav-item dropdown-toggle" 
+        data-bs-toggle="dropdown"onclick="goToService()">Services
+              </a>
 
-        <div class="nav-item dropdown">
-             <a href="service.html" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu m-0 p-0">
-                <a href="service.html" class="dropdown-item py-2">ALL Services</a>
-                <a href="SEO Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
-                <a href="Contant Marketing Service.html" class="dropdown-item py-2">Content Marketing Services</a>
-                <a href="Website Design & development.html" class="dropdown-item py-2">Web Design & Development</a>
-                <a href="Social Media Marketing.html" class="dropdown-item py-2">Social Media Marketing</a>
-                <a href="Google ads.html" class="dropdown-item py-2">PPC Management Services</a>
-                <a href="Email Marketing.html" class="dropdown-item py-2">Email Marketing Services</a>
-                <a href="Branding & graphic design page.html" class="dropdown-item py-2">Branding & Graphic Design</a>
-                <a href="online reputation management.html" class="dropdown-item py-2">Online Reputation Management</a>
-                <!-- <a href="online reputation management.html" class="dropdown-item py-2">Online Reputation</a> -->
-                <!-- <a href="conversion rate optimization.html" class="dropdown-item py-2">Conversion Rate Optimization</a> -->
+                <a href="SEO-Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
+                <a href="Contant-Marketing-Service.html" class="dropdown-item py-2">Content Marketing Services</a>
+                <a href="Website-Design-&-development.html" class="dropdown-item py-2">Web Design & Development</a>
+                <a href="Social-Media-Marketing.html" class="dropdown-item py-2">Social Media Marketing</a>
+                <a href="PPC-Management.html" class="dropdown-item py-2">PPC Management Services</a>
+                <a href="Email-Marketing.html" class="dropdown-item py-2">Email Marketing Services</a>
+                <a href="Branding-&-graphic-design-page.html" class="dropdown-item py-2">Branding & Graphic Design</a>
+                <a href="online-reputation-management.html" class="dropdown-item py-2">Online Reputation Management</a>
             </div>
         </div>
-        <a href="project.html" class="nav-item nav-link">Projects</a>
-
-        <!-- Pages Dropdown -->
-        <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
-            <div class="dropdown-menu m-0 p-0">
-                <a href="feature.html" class="dropdown-item py-2">Features</a>
-                <a href="team.html" class="dropdown-item py-2">Our Team</a>
-                <a href="testimonial.html" class="dropdown-item py-2">Testimonial</a>
-                <a href="404.html" class="dropdown-item py-2">404 Page</a>
-            </div>
-        </div>
-
+        <a href="project.html" class="nav-item nav-link">Projects</a>       
+        <a href="Blog" class="nav-item nav-link">Blog</a>
         <a href="about.html" class="nav-item nav-link">About Us</a>
         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-
     </div>
 
     <!-- RIGHT SIDE BUTTON -->
-    <a href="#" class="btn btn-sm btn-orange rounded-pill py-2 px-4 d-none d-lg-block ms-lg-auto">
+    <a href="https://wa.link/6nvtmq" class="btn btn-sm btn-orange rounded-pill py-2 px-4 d-none d-lg-block ms-lg-auto">
         Let's Talk
-    </a>
+     </a>
 </div>
     </nav>
  <!-- Navbar End -->
   
 
 
-   <!-- Carousel Start -->
+<!-- Carousel Start -->
 <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.3s">
-    <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
+  <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
-        <!-- Indicators -->
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="0" class="active"></button>
-            <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="1"></button>
-            <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="2"></button>
+    <!-- Indicators -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="2"></button>
+    </div>
+
+    <div class="carousel-inner">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <img src="img/hero1 (2).jpg" class="carousel-img" alt="Digital Marketing">
+        <div class="carousel-overlay"></div>
+
+        <div class="carousel-caption">
+          <h5 class="carousel-subtitle">Grow Your Business Online</h5>
+          <h1 class="carousel-title">
+            Powerful Digital Marketing Solutions That Deliver Results
+          </h1>
         </div>
+      </div>
 
-        <div class="carousel-inner">
+      <!-- Slide 2 -->
+      <div class="carousel-item">
+        <img src="img/hero2.jpg" class="carousel-img" alt="SEO & Marketing">
+        <div class="carousel-overlay"></div>
 
-            <!-- Slide 1 -->
-            <div class="carousel-item active">
-                <img class="w-100 carousel-img" src="img/hero1 (2).jpg" alt="Digital Marketing" >
-                <div class="carousel-caption d-flex align-items-center">
-                    <div class="text-start text-md-center w-100 px-3 px-lg-5">
-                        <h4 class="carousel-subtitle animated zoomIn">
-                            Grow Your Business Online
-                        </h4>
-                        <h1 class="carousel-title animated zoomIn">
-                            Powerful Digital Marketing Solutions That Deliver Results
-                        </h1>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Slide 2 -->
-            <div class="carousel-item">
-                <img class="w-100 carousel-img" src="img/hero2.jpg" alt="SEO & Marketing">
-                <div class="carousel-caption d-flex align-items-center">
-                    <div class="text-start text-md-center w-100 px-3 px-lg-5">
-                        <h4 class="carousel-subtitle animated zoomIn">
-                            Reach the Right Audience
-                        </h4>
-                        <h1 class="carousel-title animated zoomIn">
-                            Smart SEO, Social Media & Ads to Boost Your Brand Visibility
-                        </h1>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Slide 3 -->
-            <div class="carousel-item">
-                <img class="w-100 carousel-img" src="img/hero3.jpg" alt="Business Growth">
-                <div class="carousel-caption d-flex align-items-center">
-                    <div class="text-start text-md-center w-100 px-3 px-lg-5">
-                        <h4 class="carousel-subtitle animated zoomIn">
-                            Turn Visitors Into Customers
-                        </h4>
-                        <h1 class="carousel-title animated zoomIn">
-                     Data-Driven Marketing Strategies for Faster Growth                     
-                       </h1>
-                    </div>
-                </div>
-            </div>
-
+        <div class="carousel-caption">
+          <h5 class="carousel-subtitle">Reach the Right Audience</h5>
+          <h1 class="carousel-title">
+            Smart SEO, Social Media & Ads to Boost Your Brand Visibility
+          </h1>
         </div>
+      </div>
 
-        <!-- Controls -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
+      <!-- Slide 3 -->
+      <div class="carousel-item">
+        <img src="img/hero3.jpg" class="carousel-img" alt="Business Growth">
+        <div class="carousel-overlay"></div>
 
-        <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
+        <div class="carousel-caption">
+          <h5 class="carousel-subtitle">Turn Visitors Into Customers</h5>
+          <h1 class="carousel-title">
+            Data-Driven Marketing Strategies for Faster Growth
+          </h1>
+        </div>
+      </div>
 
     </div>
+
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+
+  </div>
 </div>
 <!-- Carousel End -->
-
-
 
     <!-- Facts Start -->
     <div class="container-xxl py-5">
@@ -284,7 +263,7 @@
                                 <small>SEO & Founder</small>
                             </div>
                         </div>
-                        <a class="btn btn-dark primary-btn rounded-pill py-3 px-5" href="">Read More</a>
+                        <a class="btn btn-dark primary-btn rounded-pill py-3 px-5" href="about.html">Read More</a>
                     </div>
                 </div>
             </div>
@@ -302,37 +281,37 @@
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <a class="service-item d-block rounded text-center h-100 p-4" href="">
+                    <a class="service-item d-block rounded text-center h-100 p-4" href="Social-Media-Marketing.html">
                         <img class="img-fluid rounded mb-4" src="img/search engine optimization.jpg" alt="">
                         <h4 class="mb-0">SEO Optimization</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <a class="service-item d-block rounded text-center h-100 p-4" href="">
+                    <a class="service-item d-block rounded text-center h-100 p-4" href="Social-Media-Marketing.html">
                         <img class="img-fluid rounded mb-4" src="img/social media marketing (2).jpg" alt="">
                         <h4 class="mb-0">Social Media Marketing</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <a class="service-item d-block rounded text-center h-100 p-4" href="">
+                    <a class="service-item d-block rounded text-center h-100 p-4" href="Email-Marketing.html">
                         <img class="img-fluid rounded mb-4" src="img/email marketing.jpg" alt="">
                         <h4 class="mb-0">Email Marketing</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <a class="service-item d-block rounded text-center h-100 p-4" href="">
+                    <a class="service-item d-block rounded text-center h-100 p-4" href="Google-ads.html">
                         <img class="img-fluid rounded mb-4" src="img/ppc management services.jpg" alt="">
                         <h4 class="mb-0">PPC Advertising</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <a class="service-item d-block rounded text-center h-100 p-4" href="">
+                    <a class="service-item d-block rounded text-center h-100 p-4" href="Website-Design-&-development.html">
                         <img class="img-fluid rounded mb-4" src="img/web design & development.jpg" alt="">
                         <h4 class="mb-0">Web Design & Development</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <a class="service-item d-block rounded text-center h-100 p-4" href="">
+                    <a class="service-item d-block rounded text-center h-100 p-4" href=" Contant-Marketing-Service.html">
                         <img class="img-fluid rounded mb-4" src="img/content marketing services.jpg" alt="">
                         <h4 class="mb-0">Content Marketing</h4>
                     </a>
@@ -402,8 +381,7 @@
     <!-- Feature End -->
 
      <!-- add slider  -->
-
-
+      
       <section class="sticky-scroll-section">
             <div class="container-xxl py-5">
 
@@ -425,7 +403,7 @@
             help businesses build long-term digital success.
           </p>
 
-          <a href="#" class="btn primary-btn mt-3">Contact Us</a>
+          <a href="contact.html" class="btn primary-btn mt-3">Contact Us</a>
 
         </div>
       </div>
@@ -534,8 +512,6 @@
 
   </div>
 </section>
-
-
 
     <!-- Project Start -->
     <div class="container-xxl py-5">
