--- a/project.html
+++ b/project.html
@@ -98,46 +98,33 @@
  <div class="collapse navbar-collapse" id="navbarCollapse">
 
     <!-- CENTER LINKS -->
-    <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
+   <div class="navbar-nav mx-auto"> 
 
         <a href="index.html" class="nav-item nav-link">Home</a>
+       <div class="nav-item dropdown">
+       <a href="service.html" class="nav-link nav-item dropdown-toggle" 
+        data-bs-toggle="dropdown"onclick="goToService()">Services
+              </a>
 
-        <div class="nav-item dropdown">
-             <a href="service.html" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu m-0 p-0">
-                <a href="service.html" class="dropdown-item py-2">ALL Services</a>
-                <a href="SEO Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
-                <a href="Contant Marketing Service.html" class="dropdown-item py-2">Content Marketing Services</a>
-                <a href="Website Design & development.html" class="dropdown-item py-2">Web Design & Development</a>
-                <a href="Social Media Marketing.html" class="dropdown-item py-2">Social Media Marketing</a>
-                <a href="Google ads.html" class="dropdown-item py-2">PPC Management Services</a>
-                <a href="Email Marketing.html" class="dropdown-item py-2">Email Marketing Services</a>
-                <a href="Branding & graphic design page.html" class="dropdown-item py-2">Branding & Graphic Design</a>
-                <a href="online reputation management.html" class="dropdown-item py-2">Online Reputation Management</a>
-                <!-- <a href="online reputation management.html" class="dropdown-item py-2">Online Reputation</a> -->
-                <!-- <a href="conversion rate optimization.html" class="dropdown-item py-2">Conversion Rate Optimization</a> -->
+                <a href="SEO-Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
+                <a href="Contant-Marketing-Service.html" class="dropdown-item py-2">Content Marketing Services</a>
+                <a href="Website-Design-&-development.html" class="dropdown-item py-2">Web Design & Development</a>
+                <a href="Social-Media-Marketing.html" class="dropdown-item py-2">Social Media Marketing</a>
+                <a href="PPC-Management.html" class="dropdown-item py-2">PPC Management Services</a>
+                <a href="Email-Marketing.html" class="dropdown-item py-2">Email Marketing Services</a>
+                <a href="Branding-&-graphic-design-page.html" class="dropdown-item py-2">Branding & Graphic Design</a>
+                <a href="online-reputation-management.html" class="dropdown-item py-2">Online Reputation Management</a>
             </div>
         </div>
-        <a href="project.html" class="nav-item nav-link">Projects</a>
-
-        <!-- Pages Dropdown -->
-        <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
-            <div class="dropdown-menu m-0 p-0">
-                <a href="feature.html" class="dropdown-item py-2">Features</a>
-                <a href="team.html" class="dropdown-item py-2">Our Team</a>
-                <a href="testimonial.html" class="dropdown-item py-2">Testimonial</a>
-                <a href="404.html" class="dropdown-item py-2">404 Page</a>
-            </div>
-        </div>
-
+        <a href="project.html" class="nav-item nav-link">Projects</a>       
+        <a href="Blog" class="nav-item nav-link">Blog</a>
         <a href="about.html" class="nav-item nav-link">About Us</a>
         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-
     </div>
 
     <!-- RIGHT SIDE BUTTON -->
-    <a href="#" class="btn btn-sm btn-orange rounded-pill py-2 px-4 d-none d-lg-block ms-lg-auto">
+    <a href="https://wa.link/6nvtmq" class="btn btn-sm btn-orange rounded-pill py-2 px-4 d-none d-lg-block ms-lg-auto">
         Let's Talk
     </a>
 </div>
